# componentize-go

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  go.mod  go.sum  main.go
.github/actions/setup-componentize-go/: action.yml
.github/workflows/: pr.yaml  release.yml
docs/: wit_async.html  wit_runtime.html  wit_types.html
examples/multiple-worlds/export_wasi_http_handler/: handler.go
examples/multiple-worlds/wit1/: world.wit
examples/sdk/: README.md  componentize-go.toml
examples/sdk/component/: README.md  go.mod
examples/sdk/pkg/: go.mod
examples/sdk/pkg/bindings/exports/wit_exports/: wit_exports.go
examples/sdk/pkg/bindings/imports/wasi_cli_environment/: wit_bindings.go
examples/sdk/pkg/bindings/imports/wasi_cli_exit/: wit_bindings.go
examples/sdk/pkg/bindings/imports/wasi_cli_stderr/: wit_bindings.go
examples/sdk/pkg/bindings/imports/wasi_cli_stdin/: wit_bindings.go
examples/sdk/pkg/bindings/imports/wasi_cli_stdout/: wit_bindings.go
examples/sdk/pkg/bindings/imports/wasi_cli_terminal_input/: wit_bindings.go
examples/sdk/pkg/bindings/imports/wasi_cli_terminal_output/: wit_bindings.go
examples/sdk/pkg/bindings/imports/wasi_cli_terminal_stderr/: wit_bindings.go
examples/sdk/pkg/bindings/imports/wasi_cli_terminal_stdin/: wit_bindings.go
examples/sdk/pkg/bindings/imports/wasi_cli_terminal_stdout/: wit_bindings.go
examples/sdk/pkg/bindings/imports/wasi_cli_types/: wit_bindings.go
examples/sdk/pkg/bindings/imports/wasi_clocks_monotonic_clock/: wit_bindings.go
examples/sdk/pkg/cli/: cli.go
examples/sdk/pkg/wit/: world.wit
examples/sdk/tcp/: Makefile  componentize-go.toml  go.mod
examples/sdk/tcp/imports/wasi_clocks_types/: wit_bindings.go
examples/sdk/tcp/imports/wasi_sockets_ip_name_lookup/: wit_bindings.go
examples/sdk/tcp/imports/wasi_sockets_types/: wit_bindings.go
examples/sdk/tcp/imports/wit_exports/: wit_exports.go
examples/sdk/tcp/wit/: ip-name-lookup.wit  types.wit  world.wit
examples/unit_tests/: unit_tests.wit
examples/unit_tests/package1/: package1.go  package1_test.go
examples/unit_tests/package2/: package2.go  package2_test.go
examples/wasip1/: Makefile  README.md
examples/wasip2/: .gitignore  Makefile  README.md
examples/wasip2/export_wasi_http_incoming_handler/: handler.go
examples/wasip2/unit_tests_should_fail/: err_test.go
examples/wasip2/unit_tests_should_pass/: ok_test.go
examples/wasip2/wit/: world.wit
examples/wasip3/: .gitignore  Makefile  README.md
examples/wasip3/export_wasi_http_handler/: handler.go
examples/wasip3/wit/: world.wit
src/: bindings.rs  build_tests.rs  cmd_bindings.rs  cmd_build.rs  cmd_test.rs  command.rs  common.rs  componentize.rs  lib.rs  manifest.rs  test.rs  utils.rs  wasi_snapshot_preview1.reactor.wasm
tests/: Cargo.toml  README.md
tests/fixtures/memory-pressure/export_wit_world/: wit_bindings.go
tests/fixtures/memory-pressure/wit/: world.wit
tests/fixtures/multiple-worlds/export_wit_world/: foo.go
tests/fixtures/multiple-worlds/wit1/: world.wit
tests/fixtures/multiple-worlds/wit2/: world.wit
tests/src/: examples.rs  fixtures.rs  harness.rs  lib.rs  wasmtime.rs
(+9 files in other folders)
